# repreprep

./: CMakeLists.txt  Circle.cpp  Circle.h  Deduction_c_s.cpp  Deduction_c_s.h  Deduction_s_t.cpp  Deduction_s_t.h  Deduction_t_c.cpp  Deduction_t_c.h  Figure.h  README.md  Square.cpp  Square.h  Truangle.cpp  Truangle.h  main.cpp
